# GPUGNN

./: .gitignore  CMakeLists.txt  README.md  available_metrics.txt  bfs_decomp.py  bfs_matmul.py  bfs_matmul_2.py  bfs_modules.py  bfs_pycuda_edge_throughput_autodecomp.py  bfs_pycuda_edge_throughput_autodecomp_learn copy.py  bfs_pycuda_edge_throughput_evolve.py  bfs_pycuda_sparse.py  bfs_pycuda_sparse_edgecount.py  bfs_pycuda_sparse_gptsimprovements.py  bfs_pycuda_sparse_piped.py  bfs_pycuda_sparse_piped_edges.py  bfs_pycuda_sparse_piped_errorhandling.py  bfs_pycuda_tensor.py  bfs_pycuda_tensor_01.py  bfs_pycuda_tensor_01_simplified.py  bfs_pycuda_tensor_01_simplified_02.py  bfs_pycuda_tensor_01_simplified_03.py  bfs_pycuda_tensor_01_simplified_05.py  bfs_pycuda_tensor_01_simplified_06.py  bfs_pycuda_tensor_01_simplified_07.py  bfs_pycuda_tensor_check_decomps.py  chatgpt_cupy_sparse.py  chatgpt_pycuda.py  chatgpt_pycuda_decomposed.py  chatgpt_pycuda_dense.py  chatgpt_pycuda_sparse.py  chatgpt_pycuda_sparse_coalesced.py  chatgpt_pycuda_sparse_snap.py  chatgpt_pytorch_GCN.py  chatgpt_pytorch_dense.py  chatgpt_pytorch_sparse.py  claude_pycuda_sparse.py  claude_pycuda_sparse_csr_csc.py  claude_pycuda_sparse_instrumented.py  claude_pycuda_sparse_tiled.py  (+36 more)
graphs/: graph_0.pkl  graph_1.pkl  graph_12.pkl  graph_13.pkl  graph_18.pkl  graph_19.pkl  graph_2.pkl  graph_20.pkl  graph_3.pkl  graph_4.pkl  graph_6.pkl  graph_7.pkl  graph_8.pkl
kernels/: dense.cu  dense_tensor.cu  partition.cu  sparse.cu  sparse_bfs.cu  sparse_bfs_tensor.cu  sparse_claude.cu  sparse_csr_csc.cu  (+5 more)
(+72 files in other folders)
